--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "community.exchange",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "engines": {
     "node": "12.x"
   },
   "description": "Application for exchanging goods and services.",
   "main": "server.js",
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "concurrently": "^6.2.0",
+    "firebase": "^8.6.8",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
+  },
   "scripts": {
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
@@ -16,22 +33,22 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.16.3",
-    "firebase": "^8.2.7",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.11.17",
-    "react-bootstrap": "^1.4.3",
-    "react-router-dom": "^5.2.0",
-    "rsuite": "^4.8.9"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
