--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "concurrently": "^6.2.0",
+    "express": "^4.17.1",
     "firebase": "^8.6.8",
+    "mongoose": "^5.12.14",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
